<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:padding="20sp"
    android:gravity="center">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textAlignment="center"
        style="@style/Title"/>

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_subtitle"
        android:textAlignment="center"
        android:textStyle="bold"
        style="@style/SubTitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/databtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_data"
        style="@style/ButtonGreen"
        android:layout_marginTop="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoutbtn"
        style="@style/ButtonGreen"
        android:layout_marginTop="15sp" />

</LinearLayout>
